@@ -117,6 +117,7 @@ a:not([href]):not([class]):hover {
 // Images
 figure,
 iframe,
+svg,
 img {
 	max-width: 100%;
 }
